--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,5 +1,6 @@
 .loader {
-	height: 100%;
+	height: 100vh;
+	height: -webkit-fill-available;
 	display: flex;
 	align-items: center;
 	justify-content: center;
